[package]
name = "scialg"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A collection of scientific algorithms"
authors = ["Dennis Lönard"]
homepage = "https://github.com/loenard97/scialg"
repository = "https://github.com/loenard97/scialg"
keywords = ["algorithms", "science"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
num = "0.4.1"
rand = "0.8.5"

[profile.release]
debug = true
